<resources>
    <array name="moods">
        <item>Happy</item>
        <item>Angry</item>
        <item>Gloomy</item>
        <item>Sulky</item>
        <item>Otl</item>
        <item>Sadness</item>
        <item>Tired</item>
        <item>Grumpy</item>
        <item>Passion</item>
    </array>
    <string name="app_name">하루에게</string>
    <string name="sub_title">오늘 하루와 대화하다</string>
    <string name="main_title">하루에게</string>
    <string name="t">"오늘도 너의 하루를 응원해"</string>
    <string name="back">BACK</string>
    <string name="modify">수정</string>
    <string name="save">SAVE</string>
    <string name="Setting">설정</string>
    <string name="notice">알림</string>
    <string name="notice_switch" />
    <string name="haru">하루의 위로</string>
    <string name="textstyle">글자 스타일</string>
    <string name="backgound">배경</string>
    <string name="password">암호 잠금</string>
    <string name="text" />
    <string name="text_type">글꼴 설정</string>
    <string name="email">E-MAIL</string>
    <string name="pass">PASSWORD</string>
    <string name="login">LOG IN</string>
    <string name="setting">설정</string>
    <string name="sign_up">Sign up</string>
    <string name="signupEmail">사용할 이메일을 입력하세요.</string>
    <string name="signupPASS">사용할 비밀번호를 입력하세요.</string>
    <string name="signupPASS2">비밀번호를 한 번 더 입력하세요.</string>
    <string name="signupNAME">이름을 입력하세요.</string>
    <string name="s_name">이름</string>
    <string name="f_name">성</string>
    <string name="emotionselecttitle">너를 위로할 하루를 선택해봐</string>
    <string name="advice">하루가 건네는 위로의 말...</string>
    <string name="joy">기쁨</string>
    <string name="happy">행복</string>
    <string name="proud">뿌듯</string>
    <string name="select_title">오늘의 감정을 골라보세요</string>
    <string name="tired_txt">피곤</string>
    <string name="sadness_txt">슬픔</string>
    <string name="angry_txt">화남</string>
    <string name="anxiety_txt">불안</string>
    <string name="gloom_txt">우울</string>
    <string name="peaceful_txt">평온</string>
    <string name="select_txt">오늘의 감정을 골라보세요</string>
    <string name="title">하루에게</string>
    <string name="dialog_advice">하루가 위로를 보내왔어요!</string>
    <string name="calendar">달력</string>
    <string name="수정">수정</string>
</resources>