<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    android:orientation="vertical"
    android:scrollbarSize="50dp"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/font_middle_school"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="20dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/secondnameTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/font_middle_school"
            android:text="@string/signupNAME"
            android:textColor="@color/black"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_singUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/font_middle_school"
            android:hint="@string/s_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/font_middle_school"
            android:text="@string/signupEmail"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/email_signUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/font_middle_school"
            android:hint="@string/email"
            android:importantForAutofill="no"></EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/font_middle_school"
            android:text="@string/signupPASS"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/pw_signUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="@font/font_middle_school"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"></EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/font_middle_school"
            android:text="@string/signupPASS2"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/pw_signUp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="@font/font_middle_school"
            android:hint="PASSWORD"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/signupTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_middle_school"
            android:gravity="center"
            android:textSize="36sp"
            android:text="회원가입"
            android:textColor="#6EA8C9"></TextView>
    </LinearLayout>

</LinearLayout>